[gd_scene load_steps=4 format=3 uid="uid://csgj103sy7guc"]

[ext_resource type="Texture2D" uid="uid://dkkb8nek5d6fs" path="res://gui/Update/logos/LEXIA Logo (with text).png" id="1_ihlsn"]
[ext_resource type="Script" uid="uid://dixnw351mfvhc" path="res://Scripts/SplashScene.gd" id="2_splash"]
[ext_resource type="FontFile" uid="uid://bdlqaeel30c00" path="res://Fonts/dyslexiafont/OpenDyslexic-Bold.otf" id="3_font"]

[node name="SplashScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_splash")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0684457, 0.0503768, 0.00715434, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LogoContainer" type="Control" parent="CenterContainer"]
layout_mode = 2

[node name="LogoRect" type="TextureRect" parent="CenterContainer/LogoContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(250, 250)
texture = ExtResource("1_ihlsn")
expand_mode = 1

[node name="LoadingLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -120.0
offset_right = 100.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 20
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadingDots" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -90.0
offset_right = 30.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 24
text = "..."
horizontal_alignment = 1
vertical_alignment = 1
